--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </form>
         </div>
       </main>
-      <footer>
+      <footer class="footerStyle">
         <p class="font-small">©2020-21 MockWiz. All rights reserved.
         </p>
       </footer>
