--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="scrollable-content">
         <header>
           <div class="logo-item">
-            <a href="index.html"><img class="logo" src="./images/MockWiz-Logo.svg" alt="MockWiz Logo"></a>
+            <a href="index.html"><img class="logo" src="./images/MockWiz-Logo (2).svg" alt="MockWiz Logo"></a>
           </div>
         </header>
         <main>
@@ -68,7 +68,7 @@
       </div>
     </div>
     <div class="container-right">
-      <div class="imageStyle"><img src="./images/MockWiz-Cover.jpg"></div>
+      <div class="imageStyle"><img src="./images/MockWiz-Cover-2.jpg"></div>
     </div>
     <!-- </div> -->
   </div>
