--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <button type="submit" class="button-default" id="ex-button">Request Early Access</button>
                 </li>
                 <li>
-                  <p class="font-small">By submitting your information, you agree to our <a href="#">Terms of Use &
+                  <p class="font-small">By submitting your information, you agree to our <a href="T&C.html">Terms of Use &
                       Privacy Policy.</a>
                   </p>
                 </li>
