cover pic updated

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
     </div>
     <div class="container-right">
-      <div class="imageStyle"><img src="./images/MockWiz-Cover-2.jpg"></div>
+      <div class="imageStyle"><img src="./images/MockWiz-Cover(1).jpg"></div>
     </div>
     <!-- </div> -->
   </div>
