--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
           </div>
         </main>
         <footer class="footerStyle">
-          <p class="font-small">©2020-21 MockWiz. All rights reserved.
+          <p class="font-small space">Contact Us at <a>hello@mockwiz.com</a></p>
+          <p class="font-small space">©2020-21 MockWiz. All rights reserved.
           </p>
         </footer>
       </div>
