--- a/T&C.html
+++ b/T&C.html
@@ -603,8 +603,11 @@
       <h4>Contacting MockWiz </h4>
       <p>If you have any questions about these Terms, please contact MockWiz at hello@Mockwiz.com
       </p>
+    </div>
 
-      <h4>Privacy Policy</h4>
+    <h3>Privacy Policy</h3>
+    <div class="tc-content">
+      
       <p>MockWiz takes your privacy very seriously. We provide this Privacy Policy to inform you of our policies and
         procedures regarding the collection, use and disclosure of personal information we receive from users of
         Mockwiz.com (the “Site”) and our application for mobile devices (the “Application”). Unless otherwise defined in
